# pdf-translator-enhanced

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENTS.md  LICENSE  PDF_Translator_Colab.ipynb  README.md  README.txt  batch_processor.py  caption_anchoring.py  cli.py  docker-compose.yml  docx_translator.py  download_marker_models.py  formula_isolator.py  formula_ocr.py  glossary.py  gradio_app.py  gradio_app.py.backup_before_cloud  index.html  install.bat  install.sh  jobs.py  languages.py  latex_build.py  latex_translator.py  layout_engine.py  linux_MacOS_Installation.sh  logging_config.py  main.py  marker_worker.py  models.py  nougat_extractor.py  ocr_handler.py  ollama_backend.py  openai_backend.py  page_by_page_translator.py  pdf_layout_translator.py  pdf_marker_translator.py  (+27 more)
.github/workflows/: ci.yml
docs/: PDF_TRANSLATION_QUALITY_ANALYSIS.md
glossaries/: computer_science_de.json  mathematics_de.json  physics_de.json
test_files/: create_test_pdf.py  create_test_pdf_with_plots.py  test_ollama_cloud.py  test_openai.py  test_plots_translation.py  test_translation.py
test_output/: extracted.md
tests/: test_core.py  test_formula_protection.py  test_integration.py  test_quality_validator.py  test_regression.py  test_table_handler.py
