# PDF Translator Enhanced - Project Configuration
#
# Modern Python packaging with PEP 517/518
#
# © 2025 Sven Kalinowski with small help of Lino Casu
# Licensed under the Anti-Capitalist Software License v1.4

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-translator-enhanced"
version = "2.0.0"
description = "Scientific PDF translation with 100% formula preservation"
readme = "README.md"
license = {text = "Anti-Capitalist Software License v1.4"}
requires-python = ">=3.10"
authors = [
    {name = "Sven Kalinowski", email = "mail@error.wtf"},
    {name = "Lino Casu"},
]
maintainers = [
    {name = "error-wtf", email = "mail@error.wtf"},
]
keywords = [
    "pdf",
    "translation",
    "latex",
    "scientific",
    "formula",
    "ollama",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Utilities",
]

dependencies = [
    "gradio>=4.0.0",
    "requests>=2.28.0",
    "PyMuPDF>=1.23.0",
    "pdfplumber>=0.10.0",
    "marker-pdf>=0.2.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# OCR for complex formulas
ocr = [
    "nougat-ocr>=0.1.17",
    "pix2tex>=0.1.0",
]

# ML-based table detection
ml = [
    "transformers>=4.36.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# All optional dependencies
all = [
    "pdf-translator-enhanced[ocr,ml,dev]",
]

[project.urls]
Homepage = "https://github.com/error-wtf/pdf-translator-enhanced"
Documentation = "https://github.com/error-wtf/pdf-translator-enhanced#readme"
Repository = "https://github.com/error-wtf/pdf-translator-enhanced.git"
Issues = "https://github.com/error-wtf/pdf-translator-enhanced/issues"
Changelog = "https://github.com/error-wtf/pdf-translator-enhanced/blob/main/CHANGELOG.md"

[project.scripts]
pdf-translate = "cli:main"

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "data*", "uploads*", "outputs*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "C901",   # too complex
    "W503",   # line break before binary operator
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "data/",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "data/*",
    "*_test.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
